--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,12 +1,35 @@
 <h1>Editing Book</h1>
-<%= form_with model:@book, url:"/books/#{@book.id}", local:true do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Body</h4>
-  <%= f.text_area :body %>
-  <%= f.submit 'Update Book' %>
-<% end %>
-<span>
-  <%= link_to 'show', book_path %>
-  <%= link_to 'back', index_path %>
-</span>
+      <% if @book.errors.any? %>
+      <div id="error_explanation">
+          <h2>
+            <%= @book.errors.count %> errors prohibited this book from being saved:
+          </h2>
+            <% @book.errors.full_messages.each do |message| %>
+              <ul>
+                <li>
+                  <%= message %>
+                </li>
+              </ul>
+            <% end %>
+      <% end %>
+            
+      <%= form_with model:@book, local:true do |f| %>
+           <div class="field">
+              <label for="book_title">Title</label>
+             <%= f.text_field :title %>
+           </div>
+           <div class="field">
+             <label for="book_body">Body</label>
+             <%= f.text_area :body %>
+           </div>
+           <div class="actions">
+             <%= f.submit 'Update Book' %>
+           </div>
+      <% end %>
+      <span>
+       <%= link_to 'show', book_path %>
+       <%= link_to 'back', books_path %>
+      </span>
+      </div>
+
+
