--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,42 +1,53 @@
-
+   <p id="notice"></p>
      <h1>Books</h1>
       <table>
-        <tr class=index-table>
-         <th>Title</th>
-         <th>Body</th>
-         <th colspan="3"></th>
-        </tr>
+        <thead>
+        　<tr>
+           <th>Title</th>
+           <th>Body</th>
+           <th colspan="3"></th>
+        　</tr>
+        </thead>
         <% @books.each do |book| %>
-         <tr>
+        <tr>
            <td><%= book.title %></td>
            <td><%= book.body %></td>
-           <td><%= link_to "show", book_path(book.id) %></td>
-           <td><%= link_to "edit", edit_book_path(book.id) %></td>
-           <td><%= link_to "delete", destroy_books_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
-         </tr>
+           <td><%= link_to "Show", book_path(book.id) %></td>
+           <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+           <td><%= link_to "Destroy", destroy_books_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+        </tr>
         <% end %>
       </table>
 
     <div>
       <h2>New book</h2>
-      <% if @book.errors.any? %>
-      <%= @book.errors.count %> errors prohibited this book from being saved:
-        <% @book.errors.full_messages.each do |message| %>
-        <%= message %>
-        <% end %>
-      <% end %>
 
-      <%= form_with model:@book, local:true do |f| %>
-       <div class="field">
-        <label for="book_title">Title</label>
-        <%= f.text_field :title %>
-       </div>
-       <div class="field">
-        <label for="book_body">Body</label>
-        <%= f.text_area :body %>
-       </div>
+
+      <% if @book.errors.any? %>
+      <div id="error_explanation">
+          <h2>
+            <%= @book.errors.count %> errors prohibited this book from being saved:
+          </h2>
+            <% @book.errors.full_messages.each do |message| %>
+              <ul>
+                <li>
+                  <%= message %>
+                </li>
+              </ul>
+            <% end %>
+            <% end %>
+      </div>
+       <%= form_with model:@book, local:true do |f| %>
+           <div class="field">
+              <label for="book_title">Title</label>
+             <%= f.text_field :title %>
+           </div>
+           <div class="field">
+             <label for="book_body">Body</label>
+             <%= f.text_area :body %>
+           </div>
        <div class="actions">
-        <%= f.submit 'create book' %>
+        <%= f.submit 'Create Book' %>
        </div>
       <% end %>
     </div>
