--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,5 +5,5 @@
 <%= @book.body %>
 <p>
   <%= link_to 'Edit', edit_book_path %>
-  <%= link_to 'Back', index_path %>
+  <%= link_to 'Back', books_path %>
 </p>
