--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
     <h1>
-        "ようこそ"
+        ようこそ
         <strong>Bookers</strong>
-        "へ！"
+        へ！
     </h1>
     <p>
         <strong>Bookers</strong>
-        "では、さまざまな書籍に関するあなたの意見や"
+        では、さまざまな書籍に関するあなたの意見や
     </p>
     <p>印象を共有し交換することができます</p>
     <span>
-      <%= link_to 'start', index_path %>
+      <%= link_to 'start', books_path %>
     </span>
 </html>
